# elf66-projeto

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.wch  README.md  riscv64-elf.cmake
Ld/: Link.ld
SDK/Ld/: Link.ld
SDK/Peripheral/inc/: ch32v30x_eth.h
SDK/Startup/: startup_ch32v30x_D8.S  startup_ch32v30x_D8C.S
include/: FreeRTOSConfig.h  ch32v30x_it.h
lib/FreeRTOS-Kernel/portable/GCC/RISC-V/: chip_extensions.cmake  portASM.S
lib/FreeRTOS-Kernel/portable/GCC/RISC-V/chip_specific_extensions/WCH_RISC_V4A_FPU/: freertos_risc_v_chip_specific_extensions.h
src/: ch32v30x_it.c  freertos_helper.c  main.c  syscalls.c
